# software-rasterizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/core/: framebuffer.h
include/raster/: rasterizer.h
src/: main.cpp
src/core/: framebuffer.cpp
src/raster/: rasterizer.cpp
